--- a/src/Component/Form/Form.css
+++ b/src/Component/Form/Form.css
@@ -5,6 +5,7 @@
     padding: 0 12px;
 }
 .swap_form{
-    color: red;
+    color: red !important;
     cursor: pointer;
+    text-decoration: none !important;
 }
