--- a/src/Component/List_coso/list.css
+++ b/src/Component/List_coso/list.css
@@ -4,3 +4,22 @@
 .down{
     margin-left: 4px;
 }
+.flex{
+    display: flex;
+}
+
+.table{
+    overflow-x: auto;
+    
+}
+
+table{
+    width: 95%;
+    margin: auto;
+}
+
+@media screen and (max-width: 768px) {
+    .flex{
+        display: block;
+    }
+}
