--- a/src/Component/Account/account.css
+++ b/src/Component/Account/account.css
@@ -23,3 +23,26 @@ button {
 .item {
     padding: 5px 0;
 }
+
+.layout{
+    display: flex;
+}
+
+.layout button{
+    margin: 4px;
+}
+
+.layout a{
+    color: #ffffff;
+    padding:0;
+}
+
+.form_account{
+    display: flex;
+}
+
+@media screen and (max-width: 768px) {
+    .form_account{
+        display: block;
+    }
+}
