--- a/src/Component/home/home.css
+++ b/src/Component/home/home.css
@@ -1,15 +1,25 @@
-
-
 ul {
     width: fit-content;
 }
 
-a.dropdown-toggle {
-    color: blue;
+img {
+    border-radius: 3px;
+    margin: 5px 0px;
+    object-fit: contain;
 }
 
-a.dropdown-toggle:hover {
-    color: red;
+a {
+    font-size: 20px;
+    text-decoration: none !important;
+}
+
+#basic-nav-dropdown {
+    color: #0d6efd;
+    font-size: 20px;
+}
+
+#basic-nav-dropdown:hover {
+    color:brown;
 }
 
 .home_nav {
@@ -18,20 +28,44 @@ a.dropdown-toggle:hover {
     align-items: center;
 }
 
+.navbar {
+    border-radius: 0px 0px 3px 3px;
+}
+
 .link {
     font-size: 20px;
     padding: 0 12px;
     text-decoration: none !important;
 }
 
-.hidden{
-    display: none !important;
+.home-outline {
+    color: orangered;
+    -webkit-text-fill-color: white;
+    -webkit-text-stroke: 1px;
 }
 
-.accountDropdown ul {
-    transform: translateX(-40%);
+.about {
+    background-color:coral;
+    color: white;
+    border-radius: 3px;
+    margin: 10px 0px;
 }
 
-a{
-    font-size: 20px;
+.image {
+    position: relative;
+}
+  
+.text-block {
+    position: absolute;
+    top: 60px;
+    left: 20px;
+    color: black;
+    padding-left: 20px;
+    padding-right: 20px;
+}
+
+@media screen and (max-width: 962px) {
+    .home_nav {
+        display: block;
+    }
 }
