--- a/src/Component/Account/account.css
+++ b/src/Component/Account/account.css
@@ -20,8 +20,18 @@ button {
     overflow-x: auto;
 }
 
+.col{
+    display: flex;
+    justify-content:center;
+    align-items:center;
+}
+
 .item {
     padding: 5px 0;
+}
+
+.item label,span{
+    font-size: 20px;
 }
 
 .layout{
@@ -40,6 +50,10 @@ button {
 .form_account{
     display: flex;
 }
+
+.disabled-link {
+    pointer-events: none;
+  }
 
 @media screen and (max-width: 768px) {
     .form_account{
