--- a/src/Component/Form/Form.css
+++ b/src/Component/Form/Form.css
@@ -1,11 +1,39 @@
+#login-background {
+    position: relative;
+    top: -5px;
+    width: 100%;
+    height: 100%;
+}
+
+#login-logo {
+    width: 20%;
+    height: 10%;
+}
+
 .head_form{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 0 12px;
+    font-family: cursive;
 }
-.swap_form{
-    color: red !important;
-    cursor: pointer;
-    text-decoration: none !important;
+
+.login-header {
+    display: flex;
+    align-items: center;
+    color: black;
+    -webkit-text-fill-color: white;
+    -webkit-text-stroke: 1px;
+}
+
+.login-text-block {
+    position: absolute;
+    top: 10%;
+    color: black;
+}
+
+@media screen and (max-width: 962px) {
+    #login-background {
+        width: 100vw;
+        height: 100vh;
+    }
 }
