--- a/src/Component/Form/Form.css
+++ b/src/Component/Form/Form.css
@@ -27,9 +27,14 @@
 
 .login-text-block {
     position: absolute;
-    top: 10%;
     color: black;
+    background-image:url('./background.jpg');
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
 }
+
 
 @media screen and (max-width: 962px) {
     #login-background {
